// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/organisms/CheckoutAddress default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c16 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c6 {
  margin-bottom: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  margin-left: 0.25rem;
  font-size: 14px;
  color: #23212B;
  font-weight: 500;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
}

.c7 input[type="checkbox"] {
  display: none;
  position: relative;
  right: -999em;
}

.c7 .checkout_icon {
  color: red;
}

.c7 input:checked + div {
  background-color: #00B0CA;
  background-color: #452FBA;
  border-radius: 0.25rem;
  overflow: hidden;
}

.c7 input:checked + div span {
  padding: 0.25rem 0.25rem 0.25rem 0.125rem;
  background-clip: content-box;
}

.c7 input:checked + div span div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  border-radius: 0.125rem;
  border: solid 0.188rem #E4E5ED;
  border: 1px solid #452FBA;
  display: block;
  height: 1.25rem;
  width: 1.25rem;
}

.c8 svg {
  fill: #fff;
}

.c12 {
  padding-top: 1.4rem;
}

.c15 {
  top: 100%;
}

.c14 {
  background-color: transparent;
  left: 0px;
  position: absolute;
  pointer-events: none;
  top: -1.5rem;
}

.c13 {
  fill: #131336;
  position: absolute;
  right: 0.75rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  top: 0.5rem;
}

.c10 {
  width: 100%;
  height: auto;
  border-radius: 1rem;
  overflow: hidden;
}

.c11 {
  width: 100%;
  height: 21.25rem;
}

.c5 {
  margin-top: 1rem;
  margin-bottom: 1rem;
  width: 100%;
}

.c5 > div {
  margin-bottom: 0rem;
}

.c5 > div > p {
  margin-left: 2rem;
  margin-top: 0.5rem;
}

.c9 {
  margin-top: 2rem;
  width: 100%;
}

.c1 {
  width: 100%;
}

.c3 {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 1.5rem;
  margin-bottom: 1.5rem;
}

.c3 > div {
  margin-top: 1.5rem;
}

.c4 {
  width: 100%;
  margin-bottom: 1.5rem;
}

.c2 {
  padding-top: 1rem;
  width: 100%;
}

@media (max-width:540px) {
  .c3 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:540px) {
  .c3 > div:last-child {
    margin-top: 1.5rem;
  }
}

@media (max-width:540px) {
  .c3 > div {
    width: 100%;
  }
}

<div
  className="c0"
>
  <section>
    <form
      action="#"
      className="whatever"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div>
        <div
          className="c1"
        >
          <div>
            <div
              className="c2"
            >
              <span
                className="fa-text-2xl fa-mb-6 fa-block fa-font-semibold"
              >
                Cliente
              </span>
              <div
                className="c3"
              >
                <div
                  className="fa-w-auto"
                >
                  <label
                    className="fa-text-gray-01 fa-text-sm"
                  >
                    Nombre completo
                    
                  </label>
                  <div
                    className="fa-w-full fa-relative fa-h-12"
                  >
                    <input
                      autoComplete="given-name"
                      className="fa-w-full fa-appearance-none fa-border fa-text-sm fa-outline-none fa-placeholder-neutral-medium fa-text-neutral-darkest fa-bg-neutral-lightest fa-border-neutral-medium focus:fa-border-neutral-darkest fa-rounded-lg fa-px-4 fa-h-12"
                      data-cy="addressFormFirstName"
                      disabled={false}
                      name="firstName"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Ejemplo: Juan Perez"
                      type="text"
                      value="John"
                    />
                  </div>
                </div>
                <div
                  className="fa-w-auto"
                >
                  <label
                    className="fa-text-gray-01 fa-text-sm"
                  >
                    Número de documento
                    
                  </label>
                  <div
                    className="fa-w-full fa-relative fa-h-12"
                  >
                    <input
                      autoComplete="documento"
                      className="fa-w-full fa-appearance-none fa-border fa-text-sm fa-outline-none fa-placeholder-neutral-medium fa-text-neutral-darkest fa-bg-neutral-lightest fa-border-neutral-medium focus:fa-border-neutral-darkest fa-rounded-lg fa-px-4 fa-h-12"
                      data-cy="addressFormDNI"
                      disabled={false}
                      inputMode="numeric"
                      maxLength={9}
                      name="documentNumber"
                      onBlur={[Function]}
                      onChange={[Function]}
                      pattern="[0-9]*"
                      placeholder="Ejemplo: 04123456"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                className="c3"
              >
                <div
                  className="fa-w-auto"
                >
                  <label
                    className="fa-text-gray-01 fa-text-sm"
                  >
                    Correo electrónico
                    
                  </label>
                  <div
                    className="fa-w-full fa-relative fa-h-12"
                  >
                    <input
                      autoComplete="email"
                      className="fa-w-full fa-appearance-none fa-border fa-text-sm fa-outline-none fa-placeholder-neutral-medium fa-text-neutral-darkest fa-bg-neutral-lightest fa-border-neutral-medium focus:fa-border-neutral-darkest fa-rounded-lg fa-px-4 fa-h-12"
                      data-cy="addressFormEmail"
                      disabled={false}
                      name="email"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Ejemplo: juan@gmail.com"
                      type="email"
                      value="abc@xyz.com"
                    />
                  </div>
                </div>
                <div
                  className="fa-w-auto"
                >
                  <label
                    className="fa-text-gray-01 fa-text-sm"
                  >
                    Número de celular
                    
                  </label>
                  <div
                    className="fa-w-full fa-relative fa-h-12"
                  >
                    <input
                      autoComplete="tel"
                      className="fa-w-full fa-appearance-none fa-border fa-text-sm fa-outline-none fa-placeholder-neutral-medium fa-text-neutral-darkest fa-bg-neutral-lightest fa-border-neutral-medium focus:fa-border-neutral-darkest fa-rounded-lg fa-px-4 fa-h-12"
                      data-cy="addressFormPhone"
                      disabled={false}
                      maxLength={9}
                      name="phone"
                      onBlur={[Function]}
                      onChange={[Function]}
                      pattern="\\\\d*"
                      placeholder="Ejem: 912345678"
                      type="tel"
                      value="+51958451245"
                    />
                  </div>
                </div>
              </div>
              <div
                className="c4"
              >
                <div
                  className="c5"
                >
                  <div
                    className="c6"
                    style={Object {}}
                  >
                    <label
                      className="c7"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        data-cy="addressFormTermsAndConditions"
                        name="termsAndConditions"
                        readOnly={true}
                        tabIndex={-1}
                        type="checkbox"
                      />
                      <div
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <span
                          className="c8"
                        >
                          <svg
                            className=" checkout_icon"
                            color="currentColor"
                            fill="currentColor"
                            height={16}
                            viewBox="0 0 24 24"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.93511 16.9996C6.68021 16.9996 6.44353 16.9009 6.27056 16.7213L1.24553 11.4598C0.899603 11.1006 0.91781 10.535 1.28194 10.1938C1.64608 9.85261 2.22869 9.87057 2.56551 10.2297L6.9169 14.7819L19.4158 1.28696C19.7526 0.918831 20.3261 0.900874 20.6993 1.23309C21.0726 1.5653 21.0999 2.13095 20.754 2.49908L7.60875 16.7123C7.43579 16.8919 7.1991 16.9996 6.93511 16.9996Z"
                            />
                          </svg>
                        </span>
                      </div>
                    </label>
                    <label
                      htmlFor=""
                    >
                      *Estoy de acuerdo con las
                      <a
                        className="fa-text-highlight-medium fa-font-semibold"
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-politicas-privacidad.pdf"
                        target="_blank"
                      >
                         
                        Políticas de privacidad
                         
                      </a>
                       
                      y
                      <a
                        className="fa-text-highlight-medium fa-font-semibold"
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-terminos-condiciones.pdf"
                        target="_blank"
                      >
                         
                        Términos y condiciones
                         
                      </a>
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="c4"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c6"
                    style={Object {}}
                  >
                    <label
                      className="c7"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        data-cy="checkoutPaymentPromoCodeCheckbox"
                        name="dataTreatmentPolicy"
                        readOnly={true}
                        tabIndex={-1}
                        type="checkbox"
                      />
                      <div
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <span
                          className="c8"
                        >
                          <svg
                            className=" checkout_icon"
                            color="currentColor"
                            fill="currentColor"
                            height={16}
                            viewBox="0 0 24 24"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.93511 16.9996C6.68021 16.9996 6.44353 16.9009 6.27056 16.7213L1.24553 11.4598C0.899603 11.1006 0.91781 10.535 1.28194 10.1938C1.64608 9.85261 2.22869 9.87057 2.56551 10.2297L6.9169 14.7819L19.4158 1.28696C19.7526 0.918831 20.3261 0.900874 20.6993 1.23309C21.0726 1.5653 21.0999 2.13095 20.754 2.49908L7.60875 16.7123C7.43579 16.8919 7.1991 16.9996 6.93511 16.9996Z"
                            />
                          </svg>
                        </span>
                      </div>
                    </label>
                    <label
                      htmlFor=""
                    >
                       
                      Acepto el tratamiento para
                      <a
                        className="fa-text-highlight-medium fa-font-semibold"
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-fines-adicionales.pdf"
                        target="_blank"
                      >
                         
                        Fines adicionales
                         
                      </a>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c2"
            >
              <span
                className="fa-text-2xl fa-mb-6 fa-block fa-font-semibold"
              >
                Dirección
              </span>
              <div
                className="c4"
              >
                <div
                  className="fa-w-auto"
                >
                  <label
                    className="fa-text-gray-01 fa-text-sm"
                  >
                    Dirección
                    
                  </label>
                  <div
                    className="fa-w-full fa-relative fa-h-12"
                  >
                    <input
                      className="fa-w-full fa-appearance-none fa-border fa-text-sm fa-outline-none fa-placeholder-neutral-medium fa-text-neutral-darkest fa-bg-neutral-lightest fa-border-neutral-medium focus:fa-border-neutral-darkest fa-rounded-lg fa-px-4 fa-h-12"
                      data-cy="addressAutocomplete"
                      disabled={false}
                      name="streetAddress1"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Ejemplo: Av. Arenales 213"
                      type="text"
                      value="St Street"
                    />
                  </div>
                </div>
                <span
                  className="fa-text-xs fa-mt-2"
                  style={
                    Object {
                      "color": "#908BA7",
                    }
                  }
                >
                  Se actualizará el mapa una vez ingresada la dirección
                </span>
              </div>
              <div
                className="c4"
              >
                <div
                  className=""
                >
                  <div
                    className="fa-w-auto"
                  >
                    <label
                      className="fa-text-gray-01 fa-text-sm"
                    >
                      Referencia
                      
                    </label>
                    <div
                      className="fa-w-full fa-relative fa-h-12"
                    >
                      <input
                        autoComplete="address-line2"
                        className="fa-w-full fa-appearance-none fa-border fa-text-sm fa-outline-none fa-placeholder-neutral-medium fa-text-neutral-darkest fa-bg-neutral-lightest fa-border-neutral-medium focus:fa-border-neutral-darkest fa-rounded-lg fa-px-4 fa-h-12"
                        data-cy="addressFormStreetAddress2"
                        disabled={false}
                        name="streetAddress2"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="Ejem: Colegio, edificio, avenida"
                        type="text"
                        value="Second"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="c10"
              >
                <div
                  className="c11"
                />
              </div>
              <div
                className="c3"
              >
                <div
                  className="fa-flex fa-flex-col"
                >
                  <div
                    className="c12"
                  >
                    <div
                      className="css-1pcexqc-container control"
                      onKeyDown={[Function]}
                    >
                      <div
                        className="css-12edi2t-control"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <div
                          className="css-tntsk8"
                        >
                          <div
                            className="css-dvua67-singleValue"
                          >
                            San Isidro
                          </div>
                          <div
                            className="css-1g6gooi"
                          >
                            <div
                              className=""
                              style={
                                Object {
                                  "display": "inline-block",
                                }
                              }
                            >
                              <input
                                aria-autocomplete="list"
                                autoCapitalize="none"
                                autoComplete="off"
                                autoCorrect="off"
                                data-cy="addressFormCity"
                                disabled={false}
                                id="react-select-12-input"
                                name="city"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                placeholder=""
                                spellCheck="false"
                                style={
                                  Object {
                                    "background": 0,
                                    "border": 0,
                                    "boxSizing": "content-box",
                                    "color": "inherit",
                                    "fontSize": "inherit",
                                    "label": "input",
                                    "opacity": 1,
                                    "outline": 0,
                                    "padding": 0,
                                    "width": "1px",
                                  }
                                }
                                tabIndex="0"
                                type="text"
                                value=""
                              />
                              <div
                                style={
                                  Object {
                                    "height": 0,
                                    "left": 0,
                                    "overflow": "scroll",
                                    "position": "absolute",
                                    "top": 0,
                                    "visibility": "hidden",
                                    "whiteSpace": "pre",
                                  }
                                }
                              >
                                
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          className="c13"
                        >
                          <svg
                            className=" "
                            color="currentColor"
                            fill="currentColor"
                            height={16}
                            viewBox="0 0 24 24"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clipRule="evenodd"
                              d="M17.7071 9.82845C17.3166 10.2239 16.6834 10.2239 16.2929 9.82845L8.97604 2.42013L1.68232 9.82845C1.27857 10.21 0.645782 10.1879 0.268949 9.7791C-0.107886 9.3703 -0.0860655 8.7296 0.317686 8.34806L8.31768 0.272307C8.71163 -0.0999703 9.32607 -0.0892473 9.70711 0.296555L17.7071 8.39655C18.0976 8.79196 18.0976 9.43304 17.7071 9.82845Z"
                              fillRule="evenodd"
                            />
                          </svg>
                        </div>
                      </div>
                      <label
                        className="fa-text-gray-01 fa-text-sm c14"
                        disabled={false}
                      >
                        Distrito
                      </label>
                    </div>
                    <div
                      className="c15"
                    />
                  </div>
                  <span
                    className="fa-text-xs fa-mt-2"
                    style={
                      Object {
                        "color": "#908BA7",
                      }
                    }
                  >
                    Llegamos a 22 distritos de Lima
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </section>
  <div
    className="c16"
  />
</div>
`;

exports[`Storyshots @components/organisms/CheckoutAddress with addresses 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c16 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c6 {
  margin-bottom: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  margin-left: 0.25rem;
  font-size: 14px;
  color: #23212B;
  font-weight: 500;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
}

.c7 input[type="checkbox"] {
  display: none;
  position: relative;
  right: -999em;
}

.c7 .checkout_icon {
  color: red;
}

.c7 input:checked + div {
  background-color: #00B0CA;
  background-color: #452FBA;
  border-radius: 0.25rem;
  overflow: hidden;
}

.c7 input:checked + div span {
  padding: 0.25rem 0.25rem 0.25rem 0.125rem;
  background-clip: content-box;
}

.c7 input:checked + div span div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  border-radius: 0.125rem;
  border: solid 0.188rem #E4E5ED;
  border: 1px solid #452FBA;
  display: block;
  height: 1.25rem;
  width: 1.25rem;
}

.c8 svg {
  fill: #fff;
}

.c12 {
  padding-top: 1.4rem;
}

.c15 {
  top: 100%;
}

.c14 {
  background-color: transparent;
  left: 0px;
  position: absolute;
  pointer-events: none;
  top: -1.5rem;
}

.c13 {
  fill: #131336;
  position: absolute;
  right: 0.75rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  top: 0.5rem;
}

.c10 {
  width: 100%;
  height: auto;
  border-radius: 1rem;
  overflow: hidden;
}

.c11 {
  width: 100%;
  height: 21.25rem;
}

.c5 {
  margin-top: 1rem;
  margin-bottom: 1rem;
  width: 100%;
}

.c5 > div {
  margin-bottom: 0rem;
}

.c5 > div > p {
  margin-left: 2rem;
  margin-top: 0.5rem;
}

.c9 {
  margin-top: 2rem;
  width: 100%;
}

.c1 {
  width: 100%;
}

.c3 {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 1.5rem;
  margin-bottom: 1.5rem;
}

.c3 > div {
  margin-top: 1.5rem;
}

.c4 {
  width: 100%;
  margin-bottom: 1.5rem;
}

.c2 {
  padding-top: 1rem;
  width: 100%;
}

@media (max-width:540px) {
  .c3 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:540px) {
  .c3 > div:last-child {
    margin-top: 1.5rem;
  }
}

@media (max-width:540px) {
  .c3 > div {
    width: 100%;
  }
}

<div
  className="c0"
>
  <section>
    <form
      action="#"
      className="whatever"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div>
        <div
          className="c1"
        >
          <div>
            <div
              className="c2"
            >
              <span
                className="fa-text-2xl fa-mb-6 fa-block fa-font-semibold"
              >
                Cliente
              </span>
              <div
                className="c3"
              >
                <div
                  className="fa-w-auto"
                >
                  <label
                    className="fa-text-gray-01 fa-text-sm"
                  >
                    Nombre completo
                    
                  </label>
                  <div
                    className="fa-w-full fa-relative fa-h-12"
                  >
                    <input
                      autoComplete="given-name"
                      className="fa-w-full fa-appearance-none fa-border fa-text-sm fa-outline-none fa-placeholder-neutral-medium fa-text-neutral-darkest fa-bg-neutral-lightest fa-border-neutral-medium focus:fa-border-neutral-darkest fa-rounded-lg fa-px-4 fa-h-12"
                      data-cy="addressFormFirstName"
                      disabled={false}
                      name="firstName"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Ejemplo: Juan Perez"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="fa-w-auto"
                >
                  <label
                    className="fa-text-gray-01 fa-text-sm"
                  >
                    Número de documento
                    
                  </label>
                  <div
                    className="fa-w-full fa-relative fa-h-12"
                  >
                    <input
                      autoComplete="documento"
                      className="fa-w-full fa-appearance-none fa-border fa-text-sm fa-outline-none fa-placeholder-neutral-medium fa-text-neutral-darkest fa-bg-neutral-lightest fa-border-neutral-medium focus:fa-border-neutral-darkest fa-rounded-lg fa-px-4 fa-h-12"
                      data-cy="addressFormDNI"
                      disabled={false}
                      inputMode="numeric"
                      maxLength={9}
                      name="documentNumber"
                      onBlur={[Function]}
                      onChange={[Function]}
                      pattern="[0-9]*"
                      placeholder="Ejemplo: 04123456"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                className="c3"
              >
                <div
                  className="fa-w-auto"
                >
                  <label
                    className="fa-text-gray-01 fa-text-sm"
                  >
                    Correo electrónico
                    
                  </label>
                  <div
                    className="fa-w-full fa-relative fa-h-12"
                  >
                    <input
                      autoComplete="email"
                      className="fa-w-full fa-appearance-none fa-border fa-text-sm fa-outline-none fa-placeholder-neutral-medium fa-text-neutral-darkest fa-bg-neutral-lightest fa-border-neutral-medium focus:fa-border-neutral-darkest fa-rounded-lg fa-px-4 fa-h-12"
                      data-cy="addressFormEmail"
                      disabled={false}
                      name="email"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Ejemplo: juan@gmail.com"
                      type="email"
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="fa-w-auto"
                >
                  <label
                    className="fa-text-gray-01 fa-text-sm"
                  >
                    Número de celular
                    
                  </label>
                  <div
                    className="fa-w-full fa-relative fa-h-12"
                  >
                    <input
                      autoComplete="tel"
                      className="fa-w-full fa-appearance-none fa-border fa-text-sm fa-outline-none fa-placeholder-neutral-medium fa-text-neutral-darkest fa-bg-neutral-lightest fa-border-neutral-medium focus:fa-border-neutral-darkest fa-rounded-lg fa-px-4 fa-h-12"
                      data-cy="addressFormPhone"
                      disabled={false}
                      maxLength={9}
                      name="phone"
                      onBlur={[Function]}
                      onChange={[Function]}
                      pattern="\\\\d*"
                      placeholder="Ejem: 912345678"
                      type="tel"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                className="c4"
              >
                <div
                  className="c5"
                >
                  <div
                    className="c6"
                    style={Object {}}
                  >
                    <label
                      className="c7"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        data-cy="addressFormTermsAndConditions"
                        name="termsAndConditions"
                        readOnly={true}
                        tabIndex={-1}
                        type="checkbox"
                      />
                      <div
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <span
                          className="c8"
                        >
                          <svg
                            className=" checkout_icon"
                            color="currentColor"
                            fill="currentColor"
                            height={16}
                            viewBox="0 0 24 24"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.93511 16.9996C6.68021 16.9996 6.44353 16.9009 6.27056 16.7213L1.24553 11.4598C0.899603 11.1006 0.91781 10.535 1.28194 10.1938C1.64608 9.85261 2.22869 9.87057 2.56551 10.2297L6.9169 14.7819L19.4158 1.28696C19.7526 0.918831 20.3261 0.900874 20.6993 1.23309C21.0726 1.5653 21.0999 2.13095 20.754 2.49908L7.60875 16.7123C7.43579 16.8919 7.1991 16.9996 6.93511 16.9996Z"
                            />
                          </svg>
                        </span>
                      </div>
                    </label>
                    <label
                      htmlFor=""
                    >
                      *Estoy de acuerdo con las
                      <a
                        className="fa-text-highlight-medium fa-font-semibold"
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-politicas-privacidad.pdf"
                        target="_blank"
                      >
                         
                        Políticas de privacidad
                         
                      </a>
                       
                      y
                      <a
                        className="fa-text-highlight-medium fa-font-semibold"
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-terminos-condiciones.pdf"
                        target="_blank"
                      >
                         
                        Términos y condiciones
                         
                      </a>
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="c4"
              >
                <div
                  className="c9"
                >
                  <div
                    className="c6"
                    style={Object {}}
                  >
                    <label
                      className="c7"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        data-cy="checkoutPaymentPromoCodeCheckbox"
                        name="dataTreatmentPolicy"
                        readOnly={true}
                        tabIndex={-1}
                        type="checkbox"
                      />
                      <div
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <span
                          className="c8"
                        >
                          <svg
                            className=" checkout_icon"
                            color="currentColor"
                            fill="currentColor"
                            height={16}
                            viewBox="0 0 24 24"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.93511 16.9996C6.68021 16.9996 6.44353 16.9009 6.27056 16.7213L1.24553 11.4598C0.899603 11.1006 0.91781 10.535 1.28194 10.1938C1.64608 9.85261 2.22869 9.87057 2.56551 10.2297L6.9169 14.7819L19.4158 1.28696C19.7526 0.918831 20.3261 0.900874 20.6993 1.23309C21.0726 1.5653 21.0999 2.13095 20.754 2.49908L7.60875 16.7123C7.43579 16.8919 7.1991 16.9996 6.93511 16.9996Z"
                            />
                          </svg>
                        </span>
                      </div>
                    </label>
                    <label
                      htmlFor=""
                    >
                       
                      Acepto el tratamiento para
                      <a
                        className="fa-text-highlight-medium fa-font-semibold"
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-fines-adicionales.pdf"
                        target="_blank"
                      >
                         
                        Fines adicionales
                         
                      </a>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c2"
            >
              <span
                className="fa-text-2xl fa-mb-6 fa-block fa-font-semibold"
              >
                Dirección
              </span>
              <div
                className="c4"
              >
                <div
                  className="fa-w-auto"
                >
                  <label
                    className="fa-text-gray-01 fa-text-sm"
                  >
                    Dirección
                    
                  </label>
                  <div
                    className="fa-w-full fa-relative fa-h-12"
                  >
                    <input
                      className="fa-w-full fa-appearance-none fa-border fa-text-sm fa-outline-none fa-placeholder-neutral-medium fa-text-neutral-darkest fa-bg-neutral-lightest fa-border-neutral-medium focus:fa-border-neutral-darkest fa-rounded-lg fa-px-4 fa-h-12"
                      data-cy="addressAutocomplete"
                      disabled={false}
                      name="streetAddress1"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Ejemplo: Av. Arenales 213"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <span
                  className="fa-text-xs fa-mt-2"
                  style={
                    Object {
                      "color": "#908BA7",
                    }
                  }
                >
                  Se actualizará el mapa una vez ingresada la dirección
                </span>
              </div>
              <div
                className="c4"
              >
                <div
                  className=""
                >
                  <div
                    className="fa-w-auto"
                  >
                    <label
                      className="fa-text-gray-01 fa-text-sm"
                    >
                      Referencia
                      
                    </label>
                    <div
                      className="fa-w-full fa-relative fa-h-12"
                    >
                      <input
                        autoComplete="address-line2"
                        className="fa-w-full fa-appearance-none fa-border fa-text-sm fa-outline-none fa-placeholder-neutral-medium fa-text-neutral-darkest fa-bg-neutral-lightest fa-border-neutral-medium focus:fa-border-neutral-darkest fa-rounded-lg fa-px-4 fa-h-12"
                        data-cy="addressFormStreetAddress2"
                        disabled={false}
                        name="streetAddress2"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="Ejem: Colegio, edificio, avenida"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="c10"
              >
                <div
                  className="c11"
                />
              </div>
              <div
                className="c3"
              >
                <div
                  className="fa-flex fa-flex-col"
                >
                  <div
                    className="c12"
                  >
                    <div
                      className="css-1pcexqc-container control"
                      onKeyDown={[Function]}
                    >
                      <div
                        className="css-12edi2t-control"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <div
                          className="css-tntsk8"
                        >
                          <div
                            className="css-151xaom-placeholder"
                          >
                            
                          </div>
                          <div
                            className="css-1g6gooi"
                          >
                            <div
                              className=""
                              style={
                                Object {
                                  "display": "inline-block",
                                }
                              }
                            >
                              <input
                                aria-autocomplete="list"
                                autoCapitalize="none"
                                autoComplete="off"
                                autoCorrect="off"
                                data-cy="addressFormCity"
                                disabled={false}
                                id="react-select-13-input"
                                name="city"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                placeholder="Selecciona tu distrito"
                                spellCheck="false"
                                style={
                                  Object {
                                    "background": 0,
                                    "border": 0,
                                    "boxSizing": "content-box",
                                    "color": "inherit",
                                    "fontSize": "inherit",
                                    "label": "input",
                                    "opacity": 1,
                                    "outline": 0,
                                    "padding": 0,
                                    "width": "1px",
                                  }
                                }
                                tabIndex="0"
                                type="text"
                                value=""
                              />
                              <div
                                style={
                                  Object {
                                    "height": 0,
                                    "left": 0,
                                    "overflow": "scroll",
                                    "position": "absolute",
                                    "top": 0,
                                    "visibility": "hidden",
                                    "whiteSpace": "pre",
                                  }
                                }
                              >
                                
                              </div>
                              <div
                                style={
                                  Object {
                                    "height": 0,
                                    "left": 0,
                                    "overflow": "scroll",
                                    "position": "absolute",
                                    "top": 0,
                                    "visibility": "hidden",
                                    "whiteSpace": "pre",
                                  }
                                }
                              >
                                Selecciona tu distrito
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          className="c13"
                        >
                          <svg
                            className=" "
                            color="currentColor"
                            fill="currentColor"
                            height={16}
                            viewBox="0 0 24 24"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clipRule="evenodd"
                              d="M17.7071 9.82845C17.3166 10.2239 16.6834 10.2239 16.2929 9.82845L8.97604 2.42013L1.68232 9.82845C1.27857 10.21 0.645782 10.1879 0.268949 9.7791C-0.107886 9.3703 -0.0860655 8.7296 0.317686 8.34806L8.31768 0.272307C8.71163 -0.0999703 9.32607 -0.0892473 9.70711 0.296555L17.7071 8.39655C18.0976 8.79196 18.0976 9.43304 17.7071 9.82845Z"
                              fillRule="evenodd"
                            />
                          </svg>
                        </div>
                      </div>
                      <label
                        className="fa-text-gray-01 fa-text-sm c14"
                        disabled={false}
                      >
                        Distrito
                      </label>
                    </div>
                    <div
                      className="c15"
                    />
                  </div>
                  <span
                    className="fa-text-xs fa-mt-2"
                    style={
                      Object {
                        "color": "#908BA7",
                      }
                    }
                  >
                    Llegamos a 22 distritos de Lima
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </section>
  <div
    className="c16"
  />
</div>
`;
